# exercise3-data-storage-pacmann

./: .env.example  .gitignore  README.md  docker-compose.yaml  pyproject.toml
dbt/: README.dbt.md  dbt_project.yml
dbt/models/: sources.yml
dbt/models/marts/: dim_aircraft.sql  dim_airline.sql  dim_airport.sql  dim_customer.sql  dim_date.sql  dim_hotel.sql  dim_service_type.sql  fct_daily_booking_summary.sql  fct_flight_booking.sql  fct_hotel_booking.sql  schema.yml
dbt/models/staging/: schema.yml  stg_aircrafts.sql  stg_airlines.sql  stg_airports.sql  stg_customers.sql  stg_flight_bookings.sql  stg_hotel.sql  stg_hotel_bookings.sql
dbt/snapshots/: snap_customer.sql  snap_hotel.sql
dbt/tests/: test_dim_customer_no_overlapping_ranges.sql  test_dim_hotel_no_overlapping_ranges.sql  test_fct_daily_booking_summary_unique_grain.sql  test_fct_flight_booking_unique_grain.sql  test_fct_hotel_booking_unique_trip_id.sql  test_fct_hotel_booking_valid_stay_nights.sql
docs/: 00_CASE_PACTRAVEL[pacmann].md  01_requirements_gathering.md  02_dimensional_model.md  03_pipeline_design.md  04_show_results_of_the_pipeline.md
src/pactravel_dwh/: load_missing_booking_tables.py  load_raw_to_dwh.py
